--- a/hack_ui.html
+++ b/hack_ui.html
@@ -63,8 +63,8 @@ display: none;
 }
 
 img {
-width:300px;
-height:200px;
+width:400px;
+height:300px;
 }
 
 </style>
@@ -447,56 +447,64 @@ function myData(Data)
   //document.getElementById("image1").src = Data["questions"][1]["image_url"];
   document.getElementById("instructions").innerHTML = Data["questions"][0]["question"];
   document.getElementById("question1").innerHTML = Data["questions"][1]["question"];
-  if (Data["questions"][1]["image_url"] != null){
+  if (Data["questions"][1]["image_url"] != "image"){
   var img = new Image();
   
-	img.src = Data["questions"][1]["image_url"];}
-  document.getElementById("question1").appendChild(img);
-  if (Data["questions"][2]["image_url"] != null){
+	img.src = Data["questions"][1]["image_url"];
+  document.getElementById("question1").appendChild(img);}
+  if (Data["questions"][2]["image_url"] != "image"){
   var img = new Image();
   
-	img.src = Data["questions"][2]["image_url"];}
-  document.getElementById("question1").appendChild(img);
+	img.src = Data["questions"][2]["image_url"];
+  document.getElementById("question1").appendChild(img);}
   document.getElementById("question2").innerHTML = Data["questions"][2]["question"];
-  if (Data["questions"][3]["image_url"] != null){
+  if (Data["questions"][3]["image_url"] != "image"){
   var img = new Image();
   
-	img.src = Data["questions"][3]["image_url"];}
+	img.src = Data["questions"][3]["image_url"];
+	document.getElementById("question1").appendChild(img);}
   document.getElementById("question3").innerHTML = Data["questions"][3]["question"]; 
-  if (Data["questions"][4]["image_url"] != null){
+  if (Data["questions"][4]["image_url"] != "image"){
   var img = new Image();
   
-	img.src = Data["questions"][4]["image_url"];}
+	img.src = Data["questions"][4]["image_url"];
+	document.getElementById("question1").appendChild(img);}
   document.getElementById("question4").innerHTML = Data["questions"][4]["question"];
-  if (Data["questions"][5]["image_url"] != null){
+  if (Data["questions"][5]["image_url"] != "image"){
   var img = new Image();
   
-	img.src = Data["questions"][5]["image_url"];}
+	img.src = Data["questions"][5]["image_url"];
+	document.getElementById("question1").appendChild(img);}
   document.getElementById("question5").innerHTML = Data["questions"][5]["question"];
-  if (Data["questions"][6]["image_url"] != null){
+  if (Data["questions"][6]["image_url"] != "image"){
   var img = new Image();
   
-	img.src = Data["questions"][6]["image_url"];}
+	img.src = Data["questions"][6]["image_url"];
+	document.getElementById("question1").appendChild(img);}
   document.getElementById("question6").innerHTML = Data["questions"][6]["question"];
-  if (Data["questions"][7]["image_url"] != null){
+  if (Data["questions"][7]["image_url"] != "image"){
   var img = new Image();
   
-	img.src = Data["questions"][7]["image_url"];}
+	img.src = Data["questions"][7]["image_url"];
+	document.getElementById("question1").appendChild(img);}
   document.getElementById("question7").innerHTML = Data["questions"][7]["question"]; 
-  if (Data["questions"][8]["image_url"] != null){
+  if (Data["questions"][8]["image_url"] != "image"){
   var img = new Image();
   
-	img.src = Data["questions"][8]["image_url"];}  
+	img.src = Data["questions"][8]["image_url"];
+	document.getElementById("question1").appendChild(img);}
   document.getElementById("question8").innerHTML = Data["questions"][8]["question"];
-  if (Data["questions"][9]["image_url"] != null){
+  if (Data["questions"][9]["image_url"] != "image"){
   var img = new Image();
   
-	img.src = Data["questions"][9]["image_url"];}
+	img.src = Data["questions"][9]["image_url"];
+	document.getElementById("question1").appendChild(img);}
   document.getElementById("question9").innerHTML = Data["questions"][9]["question"];  
-  if (Data["questions"][10]["image_url"] != null){
+  if (Data["questions"][10]["image_url"] != "image"){
   var img = new Image();
   
-	img.src = Data["questions"][10]["image_url"];}
+	img.src = Data["questions"][10]["image_url"];
+	document.getElementById("question1").appendChild(img);}
   document.getElementById("question10").innerHTML = Data["questions"][10]["question"];
   // output the details of first three posts
   //console.log("First three posts");
