--- a/hack_setup.html
+++ b/hack_setup.html
@@ -172,9 +172,9 @@ var my_nft =(async function(){
 var net = await web3.eth.net.getNetworkType()
 var chain = await web3.eth.net.getId()
 //alert(chain)
-if(chain!=137)
+if(chain!=3)
 //if(str(net).indexOf("Polygon") > -1) 
-{alert("Please connect to the Polygon Network to use this dApp")};
+{alert("Please connect to the Ropsten Test Network to use this dApp")};
 })()
 //return val
 	
