--- a/hack_setup.html
+++ b/hack_setup.html
@@ -70,8 +70,8 @@ font-size: large;
 
 <body>
 
-<h2 style="color:grey; font-family: Papyrus;"> H.I.T. Jobs </h2>
-<p style="color:grey; font-family: Papyrus;">Blockchain-powered Human Intelligence Tasks - Earn Crypto!</p>
+<h1 style="color:#ff69b4; font-family: Papyrus;"> H.I.T. Jobs </h1>
+<p style="color:#ff69b4; font-family: Papyrus;">Blockchain-powered Human Intelligence Tasks - Earn Crypto!</p>
 
 <a href="https://bafybeifc6mfrl4toiftozt7qnv4wmpv5jt3ozhwxssj57b4h4cv2ctbw6m.ipfs.nftstorage.link/questions.json">JSON Question Template</a>
 
