--- a/hack_ui_v1.html
+++ b/hack_ui_v1.html
@@ -72,8 +72,8 @@ height:300px;
 
 <body>
 
-<h3 style="color:grey; font-family: Papyrus;"> H.I.T. Jobs </h3>
-<p style="color:grey; font-family: Papyrus;">Blockchain-powered Human Intelligence Tasks - Earn Crypto!</p>
+<h1 style="color:#ff69b4; font-family: Papyrus;"> H.I.T. Jobs </h1>
+<p style="color:#ff69b4; font-family: Papyrus;">Blockchain-powered Human Intelligence Tasks - Earn Crypto!</p>
 
 
 
