--- a/hack_mainpage.html
+++ b/hack_mainpage.html
@@ -72,12 +72,12 @@ height:300px;
 
 <body>
 
-<h1 style="color:#013220; font-family: Papyrus;"> H.I.T. Jobs </h1>
+<h1 style="color:#013220; font-family: Papyrus;"> H.I.T. Jobs </h1><a href="hack_mainpage.html">main page</a>
 <p style="color:#013220; font-family: Papyrus;">Blockchain-powered Human Intelligence Tasks - Earn Crypto!</p>
 
 
 
-<center><p>To use this website you will need a crpyto wallet connected to the ropsten test network</p><center>
+<center><p>To use this website you will need a crypto wallet connected to the ropsten test network</p><center>
 <center><a href="hack_setup.html">Click here for businesses</a></center>
 <center><a href="hack_ui_v1.html">Click here for individuals</a></center>
 
