--- a/hack_mainpage.html
+++ b/hack_mainpage.html
@@ -72,7 +72,7 @@ height:300px;
 
 <body>
 
-<h1 style="color:#013220; font-family: Papyrus;"> H.I.T. Jobs </h1><a href="hack_mainpage.html">main page</a>
+<h1 style="color:#013220; font-family: Papyrus;"> H.I.T. Jobs </h1>
 <p style="color:#013220; font-family: Papyrus;">Blockchain-powered Human Intelligence Tasks - Earn Crypto!</p>
 
 
