--- a/hack_setup.html
+++ b/hack_setup.html
@@ -72,15 +72,17 @@ font-size: large;
 
 <h1 style="color:#013220; font-family: Papyrus;"> H.I.T. Jobs </h1>
 <p style="color:#013220; font-family: Papyrus;">Blockchain-powered Human Intelligence Tasks - Earn Crypto!</p>
+<a href="hack_mainpage.html">main page</a>
 
-<a href="https://bafybeifc6mfrl4toiftozt7qnv4wmpv5jt3ozhwxssj57b4h4cv2ctbw6m.ipfs.nftstorage.link/questions.json">JSON Question Template</a>
+<p>Please copy & paste this JSON file and modify to your needs.</p>
+<a href="https://bafybeif2jkisc6uwzvh5ju4lzaav2zpgua6kkpg2wcgiuoocls6qlcghvm.ipfs.nftstorage.link/questions.json">JSON Question Template</a>
 
 
 <p>Please attach JSON file to populate questions on H.I.T. page</p>
 <input type="file" name="fileInput" id="fileInput"><br><br>
 <p>Please name your JSON file</p>
 <input type="text" name="file_name" id="file_name"><br><br>
-<p>Please input answers here. At least 3 of the answers must be correct and the remaining are dummy answers</p>
+<p>Please input answers here. You must create at least 3 test questions and provide the correct answers below. This will ensure that the worker will try to provide quality answers. They will not know which questions are test one and which ones are not.</p>
 <p>1.</p>
 <input type="text" name="answer1" id="answer1"><br><br>
 <p>2.</p>
