--- a/hack_ui_v1.html
+++ b/hack_ui_v1.html
@@ -74,7 +74,7 @@ height:300px;
 
 <h1 style="color:#013220; font-family: Papyrus;"> H.I.T. Jobs </h1>
 <p style="color:#013220; font-family: Papyrus;">Blockchain-powered Human Intelligence Tasks - Earn Crypto!</p>
-
+<a href="hack_mainpage.html">main page</a>
 
 
 
