--- a/create_nft_swapx_polygon_live_v3.html
+++ b/create_nft_swapx_polygon_live_v3.html
@@ -133,7 +133,7 @@ var my_nft =(async function(){
 
 var net = await web3.eth.net.getNetworkType()
 var chain = await web3.eth.net.getId()
-alert(chain)
+//alert(chain)
 if(chain!=137)
 //if(str(net).indexOf("Polygon") > -1) 
 {alert("Please connect to the Polygon Network to use this dApp")};
