--- a/CBLExam122vMainPage2_1.htm
+++ b/CBLExam122vMainPage2_1.htm
@@ -1573,8 +1573,8 @@ web3 = new Web3(window.ethereum);
 //));
 
 
-web3.eth.net.getNetworkType()
-.then(console.log);
+//web3.eth.net.getNetworkType()
+//.then(console.log);
 
 web3.eth.net.isListening()
    .then(() => console.log('web3 is connected'))
